--- a/.gitignore
+++ b/.gitignore
@@ -2,8 +2,8 @@ minisys-1a-cpu.cache/
 minisys-1a-cpu.hw/
 minisys-1a-cpu.ip_user_files/
 minisys-1a-cpu.sim/
+minisys-1a-cpu.runs/
 .Xil/
 vivado.jou
 vivado.log
 vivado_pid21852.str
-minisys-1a-cpu.xpr
