--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,7 @@ minisys-1a-cpu.ip_user_files/
 minisys-1a-cpu.sim/
 minisys-1a-cpu.runs/
 .Xil/
+.vscode/
 vivado.jou
 vivado.log
 vivado_pid21852.str
